--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "build": "cross-env NODE_ENV=production parcel build src/index.html --public-url .",
     "watch": "parcel watch src/index.html",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist"
+    "deploy": "gh-pages -d dist",
+    "test": "jest",
+    "test:watch": "jest --watch-all"
   },
   "repository": {
     "type": "git",
@@ -30,9 +32,19 @@
   },
   "homepage": "https://nth-commit.github.io/worlde-solver/",
   "devDependencies": {
-    "cross-env": "^5.2.0",
-    "gh-pages": "^1.2.0",
-    "parcel-bundler": "^1.9.7",
-    "typescript": "^2.9.2"
+    "@types/jest": "^27.4.0",
+    "@types/react": "^17.0.38",
+    "@types/react-dom": "^17.0.11",
+    "cross-env": "^7.0.3",
+    "fast-check": "^2.20.0",
+    "gh-pages": "^3.2.3",
+    "jest": "^27.4.7",
+    "parcel": "^2.1.1",
+    "ts-jest": "^27.1.2",
+    "typescript": "^4.5.4"
+  },
+  "dependencies": {
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   }
 }
