--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,28 +1,21 @@
 {
   "compilerOptions": {
-    "module": "commonjs",
-    "moduleResolution": "node",
-    "newLine": "LF",
+    "module": "ES2020",
+    "moduleResolution": "Node",
     "outDir": "./lib/",
-    "target": "es5",
+    "target": "ES2020",
     "sourceMap": true,
     "declaration": true,
     "jsx": "preserve",
-    "lib": [
-      "es2017",
-      "dom"
-    ],
+    "lib": ["ES2020", "dom"],
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noImplicitReturns": true,
-    "noFallthroughCasesInSwitch": true
+    "noFallthroughCasesInSwitch": true,
+    "resolveJsonModule": true,
+    "esModuleInterop": true
   },
-  "include": [
-    "src/**/*"
-  ],
-  "exclude": [
-    ".git",
-    "node_modules"
-  ]
+  "include": ["src/**/*"],
+  "exclude": [".git", "node_modules"]
 }
