--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "predeploy": "npm run build",
     "deploy": "gh-pages -d dist",
     "test": "jest",
-    "test:watch": "jest --watch-all"
+    "test:watch": "jest --watch-all",
+    "performance": "ts-node --project tsconfig.perf.json perf"
   },
   "repository": {
     "type": "git",
@@ -40,6 +41,7 @@
     "jest": "^27.4.7",
     "parcel": "^2.1.1",
     "ts-jest": "^27.1.2",
+    "ts-node": "^10.4.0",
     "typescript": "^4.5.4"
   },
   "dependencies": {
