Add acceptance tests
```
Mean number of guesses: 4.572272654881337
Top 10 challenging words:
┌─────────┬──────────┬─────────────┐
│ (index) │ solution │ meanGuesses │
├─────────┼──────────┼─────────────┤
│    0    │ 'raker'  │     7.8     │
│    1    │ 'hight'  │     7.3     │
│    2    │ 'gager'  │    7.15     │
│    3    │ 'crave'  │    6.95     │
│    4    │ 'hatch'  │    6.85     │
│    5    │ 'gloze'  │     6.8     │
│    6    │ 'baker'  │    6.75     │
│    7    │ 'waker'  │     6.7     │
│    8    │ 'taker'  │    6.65     │
│    9    │ 'fight'  │     6.6     │
└─────────┴──────────┴─────────────┘
Done in 398.57s.
```

--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "deploy": "gh-pages -d dist",
     "test": "jest",
     "test:watch": "jest --watch-all",
-    "performance": "ts-node --project tsconfig.perf.json perf"
+    "performance": "ts-node --project tsconfig.node.json perf",
+    "acceptance": "ts-node --project tsconfig.node.json acceptance"
   },
   "repository": {
     "type": "git",
